[package]
name = "nom-tracable-macros"
version = "0.1.0"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/nom-tracable"
keywords = ["parser", "nom"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
description = "Helper crate of nom-tracable"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.9"
syn   = { version = "0.15.18", features = ["full", "fold", "parsing", "extra-traits"] }
