[package]
name = "nom-tracable-macros"
version = "0.9.1"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/nom-tracable"
keywords = ["parser", "nom"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
description = "Helper crate of nom-tracable"
edition = "2018"

[package.metadata.release]
tag = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0.0"
syn   = {version = "1.0.0", features = ["full", "fold", "parsing", "extra-traits"]}
