[package]
name = "nom-tracable"
version = "0.7.0"
authors = ["dalance <dalance@gmail.com>"]
repository = "https://github.com/dalance/nom-tracable"
keywords = ["parser", "nom"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
description = "Extension of nom to trace parser"
edition = "2018"

[package.metadata.release]
pre-release-replacements = [
    {file = "../README.md", search = "nom-tracable = \"[a-z0-9\\.-]+\"", replace = "nom-tracable = \"{{version}}\""},
    {file = "../CHANGELOG.md", search = "Unreleased", replace = "v{{version}}"},
    {file = "../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}"},
    {file = "../CHANGELOG.md", search = "Change Log", replace = "Change Log\n\n## [Unreleased](https://github.com/dalance/nom-tracable/compare/v{{version}}...Unreleased) - ReleaseDate"},
]

[features]
default = []
trace   = []

[dependencies]
nom                 = "7"
nom_locate          = "3"
nom_locate1         = {version = "1", package = "nom_locate"}
nom-tracable-macros = {path = "../nom-tracable-macros", version = "^0.7.0"}

[dev-dependencies]
nom5        = {version = "5", package = "nom"}
nom_locate2 = {version = "2", package = "nom_locate"}
